<resources>
    <string name="app_name" translatable="false">KILauncher</string>
    <string name="next">Next</string>
    <string name="description_main">lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="description_second">lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="description_third">lorem ipsum dolor sit amet, consectetur adipiscing elit</string>

    <string name="choose_size">Icons per line</string>
    <string name="standart_size">standard</string>
    <string name="large_size">large</string>
    <string name="choose_theme">Theme</string>
    <string name="light">light</string>
    <string name="dark">dark</string>

    <string name="app_title" translatable="false">%X</string>
    <string name="new_apps">new</string>
    <string name="popular">popular</string>

    <string name="menu_delete">Delete</string>
    <string name="menu_info">Info</string>
    <string name="menu_add_to_favorites" translatable="false">Add to favorites</string>
    <string name="menu_delete_from_favorites" translatable="false">Delete from favorites</string>

    <string name="action_settings">Settings</string>
</resources>
